pages/reference-smart-account/v1.3.0/modules/execTransactionFromModule.mdx
import { Tabs, Callout } from 'nextra/components'
import ExecutionFromModuleSuccess from '../events/ExecutionFromModuleSuccess.mdx'
import ExecutionFromModuleFailure from '../events/ExecutionFromModuleFailure.mdx'
import LegacyCallout from '../../../../components/callouts/LegacyCallout.mdx'
import OnlySafeTxCallout from '../../../../components/callouts/OnlySafeTxCallout.mdx'
import ReentrancyCallout from '../../../../components/callouts/ReentrancyCallout.mdx'
import IrreversibilityCallout from '../../../../components/callouts/IrreversibilityCallout.mdx'
import VirtualCallout from '../../../../components/callouts/VirtualCallout.mdx'
import ModuleCallout from '../../../../components/callouts/ModuleCallout.mdx'
import PreApprovedCallout from '../../../../components/callouts/PreApprovedCallout.mdx'


<LegacyCallout />

# `execTransactionFromModule` (0x468721a7)



Allows a Module to execute a Safe transaction without any further confirmations.




Defined in [`ModuleManager.sol`](https://github.com/safe-global/safe-smart-account/tree/v1.3.0/contracts/base/ModuleManager.sol#L61).


## Usage

{/* <!-- vale off --> */}

<Tabs items={['example.sol']}>
  <Tabs.Tab>
    ```solidity
    interface ISafe {
        function execTransactionFromModule(
            address to,
            uint256 value,
            bytes memory data,
            Enum.Operation operation
        ) public virtual returns (bool success)
    }

    contract Example {
        function example() ... {
            (ISafe safe).execTransactionFromModule(
                0x...,
                0,
                "0x...",
                0
            );
        }
    }
    ```
  </Tabs.Tab>
</Tabs>

{/* <!-- vale on --> */}



## Parameters

### `to`

  - **Type:** `address`

  Destination address of module transaction.

  ```solidity focus=2
  (ISafe safe).execTransactionFromModule(
    0x...,
    0,
    "0x...",
    0
  );
  ```


### `value`

  - **Type:** `uint256`

  Ether value of module transaction.

  ```solidity focus=3
  (ISafe safe).execTransactionFromModule(
    0x...,
    0,
    "0x...",
    0
  );
  ```


### `data`

  - **Type:** `bytes`

  Data payload of module transaction.

  ```solidity focus=4
  (ISafe safe).execTransactionFromModule(
    0x...,
    0,
    "0x...",
    0
  );
  ```


### `operation`

  - **Type:** `enum Enum.Operation`

  Operation type of module transaction.

  ```solidity focus=5
  (ISafe safe).execTransactionFromModule(
    0x...,
    0,
    "0x...",
    0
  );
  ```




## Events

<ExecutionFromModuleSuccess />
<ExecutionFromModuleFailure />

