pages/reference-smart-account/v1.4.1/modules/execTransactionFromModule.mdx
import { Tabs, Callout } from 'nextra/components'
import ExecutionFromModuleSuccess from '../events/ExecutionFromModuleSuccess.mdx'
import ExecutionFromModuleFailure from '../events/ExecutionFromModuleFailure.mdx'
import LegacyCallout from '../../../../components/callouts/LegacyCallout.mdx'
import OnlySafeTxCallout from '../../../../components/callouts/OnlySafeTxCallout.mdx'
import ReentrancyCallout from '../../../../components/callouts/ReentrancyCallout.mdx'
import IrreversibilityCallout from '../../../../components/callouts/IrreversibilityCallout.mdx'
import VirtualCallout from '../../../../components/callouts/VirtualCallout.mdx'
import ModuleCallout from '../../../../components/callouts/ModuleCallout.mdx'
import PreApprovedCallout from '../../../../components/callouts/PreApprovedCallout.mdx'




# `execTransactionFromModule` (0x468721a7)

Executes an `operation` (`0`: Call, `1`: DelegateCall) to `to` address with the value `value` (in native token)

Defined in [`ModuleManager.sol`](https://github.com/safe-global/safe-smart-account/tree/v1.4.1/contracts/base/ModuleManager.sol#L81).


## Usage

{/* <!-- vale off --> */}

<Tabs items={['example.sol']}>
  <Tabs.Tab>
    ```solidity
    interface ISafe {
        function execTransactionFromModule(
            address to,
            uint256 value,
            bytes memory data,
            Enum.Operation operation
        ) public virtual returns (bool success)
    }

    contract Example {
        function example() ... {
            ISafe(0x...).execTransactionFromModule(
                0x...,
                0,
                "0x...",
                0
            );
        }
    }
    ```
  </Tabs.Tab>
</Tabs>

{/* <!-- vale on --> */}

## Returns

### `success`

  - **Type:** `bool`

  Boolean flag indicating if the call succeeded.




## Parameters

### `to`

  - **Type:** `address`

  Destination address of module transaction.

  ```solidity focus=2
  ISafe(0x...).execTransactionFromModule(
    0x...,
    0,
    "0x...",
    0
  );
  ```


### `value`

  - **Type:** `uint256`

  Ether value of module transaction.

  ```solidity focus=3
  ISafe(0x...).execTransactionFromModule(
    0x...,
    0,
    "0x...",
    0
  );
  ```


### `data`

  - **Type:** `bytes`

  Data payload of module transaction.

  ```solidity focus=4
  ISafe(0x...).execTransactionFromModule(
    0x...,
    0,
    "0x...",
    0
  );
  ```


### `operation`

  - **Type:** `enum Enum.Operation`

  Operation type of module transaction.

  ```solidity focus=5
  ISafe(0x...).execTransactionFromModule(
    0x...,
    0,
    "0x...",
    0
  );
  ```




## Events

<ExecutionFromModuleSuccess />
<ExecutionFromModuleFailure />

